--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 
 <header>
     <nav>
-        <span class="web">Web</span>
-        <span class="studio">Studio</span>
-        <a href="./index.html" class="logo">
-        </a> 
+
+        <a href="" class="web"><span>Web</span></a>
+        <a href="" class="studio"><span>Studio</span>
     
         <ul class="site-nav list">
             <li><a href="./index.html" class="link">Студия</a></li>
@@ -159,20 +158,21 @@
     </section>
 </main>
 
-    <footer>
+    <footer class="footer">
 
-            <span class="web">Web</span>
-            <span class="studiof">Studio</span>
-            <a href="./index.html" class="logo">
-            </a>
+            <a href="" class="web"><span>Web</span></a>
+            <a href="" class="studiof"><span>Studio</span></a> 
 
         <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tell:+380991111111">+38 099 111 11 11</a>
+            <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
+
+            <ul class="site-contactf list">
+                <a href="mailto:info@example.com" class="link">info@example.com</a>
+                <a href="tell:+380991111111" class="link">+38 099 111 11 11</a>
+            </ul>
         </address>
 
-    <h3>Присоединяйтесь</h3>
+    <h3 class="offer">Присоединяйтесь</h3>
 
     <ul class="social-net footer">
         <li><a href="" class="link">Instagram</a></li>
@@ -181,7 +181,7 @@
         <li><a href="" class="link">LinkedIn</a></li>  
     </ul>
 
-    <h3>Подпишитесь на рассылку</h3>
+    <h3 class="offer">Подпишитесь на рассылку</h3>
     <a href="" class="button">Подписаться</a>
     </footer>
 
